--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
 @theme {
   --animate-spin-slow: spin 20s linear infinite;
 }
+
+@font-face {
+  font-family: "GeistPixelCircle";
+  src: url("/fonts/GeistPixel-Circle.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
