Proper Geist Pixel Circle implementation with glyph animation

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 @font-face {
-  font-family: "GeistPixelCircle";
+  font-family: "Geist-Circle";
   src: url("/fonts/GeistPixel-Circle.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
