--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Geist Sans";
+  src: url("/fonts/GeistSans-Variable.woff2") format("woff2");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
